# rigatoni

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HEADER  LICENSE  README.md  RELEASE.md  deny.toml
.github/: CI_GUIDE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: benchmarks.yml  ci.yml
docker/: README.md  docker-compose.localstack.yml  docker-compose.minimal.yml  docker-compose.observability.yml  docker-compose.yml
docker/config/: prometheus.yml
docker/config/grafana/dashboards/: rigatoni.yml
docker/config/grafana/datasources/: prometheus.yml
docker/scripts/: README.md  generate-test-data.sh  init-localstack.sh  init-mongo.sh  quick-start-local.sh  setup-local-env.sh
docs/: OBSERVABILITY.md  README-WORKSPACE.md  README.md  _config.yml  architecture.md  contributing.md  getting-started.md  index.md  performance.md
docs/api/: index.md
docs/grafana/: rigatoni-dashboard.json
docs/guides/: index.md  local-development.md  multi-instance-deployment.md  production-deployment.md  redis-configuration.md  s3-configuration.md
examples/: Cargo.toml  README.md  s3_advanced.rs
rigatoni-benches/: Cargo.toml  README.md  run-benchmarks.sh
rigatoni-benches/benches/: batch_processing.rs  pipeline_throughput.rs  s3_destination.rs
rigatoni-core/: Cargo.toml  README.md
rigatoni-core/examples/: README.md  metrics_prometheus.rs
rigatoni-core/src/: destination.rs  event.rs  lib.rs  metrics.rs  pipeline.rs  state.rs  stream.rs  watch_level.rs
rigatoni-core/tests/: destination_tests.rs  event_tests.rs  metrics_tests.rs  pipeline_integration_test.rs  stream_integration_test.rs  watch_level_tests.rs
rigatoni-destinations/: Cargo.toml  README-S3.md  README.md  docker-compose.yml
rigatoni-destinations/examples/: README.md  s3_advanced.rs  s3_basic.rs  s3_with_compression.rs
rigatoni-destinations/src/: lib.rs
rigatoni-destinations/src/s3/: README-S3.md  config.rs  destination.rs  key_gen.rs  mod.rs
rigatoni-destinations/tests/: s3_config_test.rs  s3_destination_test.rs  s3_integration_test.rs  s3_key_gen_test.rs
rigatoni-examples/: Cargo.toml  README.md  change_stream_listener.rs  database_watching.rs  metrics_prometheus.rs  multi_instance_redis.rs  s3_advanced.rs  s3_basic.rs  s3_with_compression.rs  simple_pipeline_memory.rs
rigatoni-stores/: Cargo.toml  README.md
rigatoni-stores/src/: lib.rs  memory.rs  redis.rs
rigatoni-stores/tests/: redis_integration_test.rs  redis_test.rs
scripts/: pre-push.ps1  pre-push.sh
tools/: README.md
tools/license-header/: Cargo.toml  README.md
tools/license-header/src/: main.rs
