[workspace]
resolver = "2"
members = [
    "rigatoni-core",
    "rigatoni-destinations",
    "rigatoni-stores",
    "examples",  # Unpublished examples crate
]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.88"
authors = ["Valerio Uberti <valeriouberti@icloud.com>"]
license = "Apache-2.0"
repository = "https://github.com/valeriouberti/rigatoni"
homepage = "https://github.com/valeriouberti/rigatoni"
documentation = "https://docs.rs/rigatoni-core"
keywords = ["cdc", "data-replication", "change-data-capture", "pipeline", "streaming"]
categories = ["database", "asynchronous", "data-structures"]

[workspace.dependencies]
# Async runtime - full feature set for comprehensive async support
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }

# Serialization - core to data transformation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and observability - critical for production data pipelines
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling - using thiserror for ergonomic error types
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# MongoDB driver - official driver for change stream support
mongodb = "3.3"
bson = "2.15"

# AWS SDK for S3 destination (requires Rust 1.88+)
aws-config = "1.8"
aws-sdk-s3 = "1.112"

# Google Cloud BigQuery
gcp-bigquery-client = "0.27"

# Kafka client for streaming destinations
rdkafka = { version = "0.38", features = ["tokio"] }

# Redis for distributed state management
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# Time handling for timestamps and scheduling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for correlation IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Configuration management
config = "0.14"

# Testing utilities
mockall = "0.13"
tokio-test = "0.4"

# Performance monitoring
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# Serialization formats
csv = "1.3"
parquet = "57.0"
arrow-schema = "57.0"
arrow-array = "57.0"
apache-avro = "0.20"

# Compression
flate2 = "1.0"
zstd = "0.13"

# HTTP client for webhooks and APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# CLI utilities (for potential CLI tools)
clap = { version = "4.5", features = ["derive"] }

# Concurrency primitives
parking_lot = "0.12"
dashmap = "6.1"

# Schema management
schemars = { version = "0.8", features = ["chrono", "uuid1"] }

# Random number generation (for backoff jitter)
rand = "0.8"
