[package]
name = "rigatoni-destinations"
description = "Destination implementations for Rigatoni CDC/Data Replication: S3 with multiple formats and compression"
readme = "README.md"

# Inherit workspace metadata
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core crate dependency
# Use compatible version range to allow publishing before rigatoni-core 0.1.1 is on crates.io
rigatoni-core = { version = "0.1", path = "../rigatoni-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Serialization formats (optional, enabled by features)
csv = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
apache-avro = { workspace = true, optional = true }

# Compression (optional, enabled by features)
flate2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# AWS S3 (optional, enabled by s3 feature)
[dependencies.aws-config]
workspace = true
optional = true

[dependencies.aws-sdk-s3]
workspace = true
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
bson = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# Default enables common destinations
default = ["s3", "json", "csv"]

# Cloud storage destinations
s3 = ["aws-config", "aws-sdk-s3"]

# File format support
json = []
csv = ["dep:csv"]
parquet = ["dep:parquet", "dep:arrow-schema", "dep:arrow-array"]
avro = ["dep:apache-avro"]

# Compression support
compression = ["gzip", "zstandard"]
gzip = ["flate2"]
zstandard = ["zstd"]

# All formats and compression (useful for testing and development)
all-formats = ["json", "csv", "parquet", "avro"]
all = ["s3", "all-formats", "compression"]

[lib]
name = "rigatoni_destinations"
path = "src/lib.rs"
