[package]
name = "rigatoni-stores"
description = "State store implementations for Rigatoni ETL: Memory, File, Redis for distributed state management"
readme = "README.md"

# Inherit workspace metadata
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core crate dependency
rigatoni-core = { version = "0.1", path = "../rigatoni-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bson = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency primitives
parking_lot = { workspace = true }
dashmap = { workspace = true, optional = true }

# Time handling
chrono = { workspace = true }

# Redis for distributed state (optional, enabled by redis-store feature)
[dependencies.redis]
workspace = true
optional = true

[dependencies.deadpool-redis]
workspace = true
optional = true

[dependencies.deadpool]
version = "0.12"
optional = true

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
mongodb = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }

[features]
# Default enables in-memory and file-based stores
default = ["memory", "file"]

# Store implementations
memory = ["dashmap"]
file = []
redis-store = ["redis", "deadpool-redis", "deadpool"]

# All stores (useful for testing and development)
all-stores = ["memory", "file", "redis-store"]

[lib]
name = "rigatoni_stores"
path = "src/lib.rs"
